# e-referrals-service-api

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  es-proxies-deploy.yml  grep  manifest_template.yml  node-deps.json  package-lock.json  package.json  pyproject.toml  redocly.yaml  test.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/instructions/: proxy.instructions.md  sandbox.instructions.md  specification.instructions.md  testing.instructions.md
.github/prompts/: add-context.prompt.md  overview.prompt.md  release.prompt.md
.github/workflows/: combine-prs.yml  continous-integration-workflow.yaml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: ers-integration-tests.yml  ers-sandbox-tests.yml  ers-smoke.yml  run-tests.yml
docker/build-container/: Dockerfile  Makefile
macros/: manifest_macros.yml
sandbox/: Dockerfile  Makefile  README.md  eslint.config.js  package-lock.json  package.json  python-deps.txt
sandbox/api/: openapi.yaml
sandbox/controllers/: Default.js
sandbox/service/: DefaultService.js
sandbox/src/: app.js  config.json
scripts/: copy_examples_from_sandbox.sh  format_changes.sh  macos_clean_environment.sh  macos_setup_environment.sh  populate_placeholders.py  pre-commit  resolve_example_refs.py  rhel_clean_environment.sh  rhel_setup_environment.sh  ubuntu_clean_environment.sh  ubuntu_setup_environment.sh  update_version.py  validate_oas_examples.py  xml_validator.py
specification/: e-referrals-service-api.yaml
terraform/: main.tf
tests/: asserts.py  conftest.py  data.py  decorators.py  state.py  utils.py
tests/integration/: test_app_restricted.py  test_headers.py  test_user_restricted.py
tests/sandbox/: SandboxTest.py  conftest.py  test_a004_get_codesystem.py  test_a005_get_referral_request.py  test_a005_get_referral_request_versioned.py  test_a006_get_attachment.py  test_a007_retrieve_clinical_information.py  test_a008_get_referral_worklist.py  test_a010_patient_service_search.py  test_a011_create_referral.py  test_a012_maintain_referral_letter.py  test_a014_reject_referral.py  test_a015_get_appointment_slots.py  test_a016_book_or_defer_appointment.py  test_a019_generate_patient_letter.py  test_a020_upload_attachment.py  test_a021_create_referral_send_for_triage.py  test_a022_cancel_appointment_action_later.py  test_a023_get_advice_worklist.py  test_a024_get_advice_and_guidance_request.py  test_a024_get_advice_and_guidance_request_versioned.py  test_a025_get_advice_and_guidance_conversation.py  test_a026_send_advice_and_guidance.py  test_a027_convert_advice_and_guidance.py  test_a028_record_triage_outcome.py  test_a031_change_shortlist.py  (+40 more)
(+1304 files in other folders)
