[project]
python = "^3.8"


[tool.poetry]
name = "e-referrals-service-api"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/e-referrals-service-api"

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.43"
lxml = "^4.9.4"
xmlformatter = "^0.2.6"
pytest-check = "^2.2.3"
requests = "^2.32.1"
openapi-core = "^0.19.1"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^24.4"
pip-licenses = "^4.4.0"
jinja2 = "^3.1.4"
pytest = "^6.1.2"
pytest-asyncio = "^0.20.3"
pytest-nhsd-apim = "^3.3.12"

[tool.poetry.scripts]

[tool.pytest.ini_options]
markers = ["smoke_test", "integration_test", "sandbox"]
